# pcb

./: Cargo.toml  kicad2zen-spec.md
crates/pcb/: Cargo.toml
crates/pcb-kicad2zen/: Cargo.toml
crates/pcb-kicad2zen/src/: lib.rs
crates/pcb-kicad2zen/src/emit/: emitter.rs  faithful.rs  idiomatic.rs  mod.rs
crates/pcb-kicad2zen/src/mapping/: footprints.rs  mod.rs  nets.rs  symbols.rs  values.rs
crates/pcb-kicad2zen/src/parser/: mod.rs  pcb.rs  project.rs  schematic.rs
crates/pcb/src/: import.rs  main.rs
